# fashnai

./: .gitignore  CHANGES.md  Dockerfile  PAID_TIER_UPGRADE.md  RATE_LIMITS.md  README.md  SETUP.md  WINDSURF_DEPLOY_INSTRUCTIONS.md  netlify.toml  project_story.md  pyproject.toml  render.yaml  requirements.txt  start.sh  tagline.md  windsurf_deployment.yaml
backend/: PriceAgent.py  ProductSpecsAgent.py  ReviewAnalyzerAgent.py  VirtualTryOnAgent.py  api.py  api_key_manager.py  database.py  playground.py  product_image_extractor.py
backend/tmp/: agents.db
docs/: ARCHITECTURE.md  PRD-python-llm-agents.md  TECH-SPEC-python-llm.md
frontend/: netlify.toml  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/product/: page.tsx
frontend/app/product/[url]/: page.tsx
frontend/app/try-on/: loading.tsx  page.tsx
tmp/: agents.db
