[project]
name = "fashnai"
version = "0.1.0"
description = "FashnAI - AI-powered fashion product comparison platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.7.5",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "azure-ai-inference>=1.0.0b9",
    "beautifulsoup4>=4.12.0",
    "crawl4ai>=0.6.2",
    "duckduckgo-search>=8.0.1",
    "fastapi>=0.115.12",
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    "google-search-results>=2.4.2",
    "pandas>=2.2.3",
    "pandas-stubs==2.3.3.260113",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
