[project]
name = "fashnai"
version = "0.1.0"
description = "FashnAI - AI-powered fashion product comparison platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno==2.4.8",
    "aiofiles==25.1.0",
    "aiohttp==3.13.3",
    "beautifulsoup4==4.14.3",
    "fastapi==0.128.2",
    "google-genai==1.62.0",
    "google-search-results>=2.4.2",
    "pillow==12.1.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22",
    "uvicorn==0.40.0",
]

[project.optional-dependencies]
crawling = [
    "crawl4ai>=0.6.2",
]
